// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexPatterns savedObjectToSpec 1`] = `
Object {
  "dataSourceRef": undefined,
  "description": undefined,
  "displayName": undefined,
  "fields": Object {},
  "id": "id",
  "intervalName": undefined,
  "schemaMappings": Object {
    "otelLogs": Object {
      "traceId": "trace.id",
    },
  },
  "signalType": undefined,
  "sourceFilters": Array [
    Object {
      "value": "item1",
    },
    Object {
      "value": "item2",
    },
  ],
  "timeFieldName": "@timestamp",
  "title": "opensearch-dashboards-*",
  "type": "",
  "typeMeta": Object {},
  "version": "version",
}
`;

exports[`IndexPatterns savedObjectToSpecWithDataSource 1`] = `
Object {
  "dataSourceRef": Object {
    "id": "id",
    "name": "dataSource",
    "type": "data-source",
  },
  "description": undefined,
  "displayName": undefined,
  "fields": Object {},
  "id": "id",
  "intervalName": undefined,
  "schemaMappings": Object {
    "otelLogs": Object {
      "spanId": "span.id",
    },
  },
  "signalType": undefined,
  "sourceFilters": Array [
    Object {
      "value": "item1",
    },
    Object {
      "value": "item2",
    },
  ],
  "timeFieldName": "@timestamp",
  "title": "opensearch-dashboards-*",
  "type": "",
  "typeMeta": Object {},
  "version": "version",
}
`;
